--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,29 @@ inputs:
   validationfile:
     description: "path to the YAML file containing schema, test relationships, assertions and expected relations"
     required: true
+  aws-access-key-id:
+    description: "AWS Access Key ID"
+    required: true
+  aws-secret-access-key:
+    description: "AWS Secret Access Key"
+    required: true
+  aws-region:
+    description: "AWS Region"
+    required: true
+    default: "eu-central-1"
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: "composite"
+  steps:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+        aws-region: ${{ inputs.aws-region }}
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+    - name: Run SpiceDB Validation
+      uses: docker://docker
+      with:
+        args: build -t spicedb-validator . && docker run --rm spicedb-validator ${{ inputs.validationfile }}
